fix the placeholders and final votes overflow

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -19,10 +19,12 @@
   text-align: center;
   line-height: 4em;
   cursor: pointer;
+  overflow: hidden;
 }
 .card--2-sided {
-  float: left;
+  display: inline-block;
 }
+
 .card--selected {
   background-color: gold;
 }
@@ -34,6 +36,7 @@
   position: absolute;
   display: inline-block;
   width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
 }
